(alias
 (name runtest)
 (package atds)
 (action (diff expected/A.scala com/mylife/test/A.scala)))

(alias
 (name runtest)
 (package atds)
 (action (diff expected/Atdj.scala com/mylife/test/Atdj.scala)))

(alias
 (name runtest)
 (package atds)
 (action (diff expected/B.scala com/mylife/test/B.scala)))

(alias
 (name runtest)
 (package atds)
 (action
  (diff expected/ComplexRecord.scala com/mylife/test/ComplexRecord.scala)))

(alias
 (name runtest)
 (package atds)
 (action (diff expected/E.scala com/mylife/test/E.scala)))

(alias
 (name runtest)
 (package atds)
 (action
  (diff expected/RecordWithDefaults.scala com/mylife/test/RecordWithDefaults.scala)))

(alias
 (name runtest)
 (package atds)
 (action (diff expected/SampleSum.scala com/mylife/test/SampleSum.scala)))

(alias
 (name runtest)
 (package atds)
 (action (diff expected/SimpleRecord.scala com/mylife/test/SimpleRecord.scala)))

(alias
 (name runtest)
 (package atds)
 (action (diff expected/Util.scala com/mylife/test/Util.scala)))

(alias
 (name runtest)
 (package atds)
 (action (diff expected/package.html com/mylife/test/package.html)))

(alias
 (name runtest)
 (package atds)
 (deps
  AtdjTest.java
  json.jar
  junit-4.8.2.jar
  (glob_files com/mylife/test/*.scala))
 (action (run ./run_test.sh)))
